gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloserver-vs
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - istio-autogenerated-k8s-ingress.istio-system
  http:
  - match:
    - uri:
        prefix: /hello
    route:
    - destination:
        host: helloserver-service
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloserver
  namespace: default
spec:
  host: helloserver-service
